assert(!hr->isHumongous()) failed: code root in humongous region?

XMLWordPrintable

    • gc
    • b59
    • Not verified

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/152837.amurillo/s/src/share/vm/gc_implementation/g1/g1CollectedHeap.cpp:6659), pid=8812, tid=140642794587904
        # assert(!hr->isHumongous()) failed: code root in humongous region?
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b114) (build 1.8.0-ea-fastdebug-b114)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b57-internal-201311011528.amurillo.hs25-b57-snapshot-fastdebug mixed mode linux-amd64 compressed oops)
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

        --------------- T H R E A D ---------------

        Current thread (0x00007fea441fb800): JavaThread "C1 CompilerThread2" daemon [_thread_in_vm, id=8832, stack(0x00007fe9f3bfc000,0x00007fe9f3cfd000)]

        Stack: [0x00007fe9f3bfc000,0x00007fe9f3cfd000], sp=0x00007fe9f3cfa740, free space=1017k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xf5e88a] VMError::report_and_die()+0x2da
        V [libjvm.so+0x6deff4] report_vm_error(char const*, int, char const*, char const*)+0x84
        V [libjvm.so+0x7d3677] RegisterNMethodOopClosure::do_oop(oop*)+0x247
        V [libjvm.so+0xc9c945] nmethod::oops_do(OopClosure*, bool)+0x1d5
        V [libjvm.so+0x7b8315] G1CollectedHeap::register_nmethod(nmethod*)+0x45
        V [libjvm.so+0xca0490] nmethod::nmethod(Method*, int, int, int, CodeOffsets*, int, DebugInformationRecorder*, Dependencies*, CodeBuffer*, int, OopMapSet*, ExceptionHandlerTable*, ImplicitExceptionTable*, AbstractCompiler*, int)+0x630
        V [libjvm.so+0xca086f] nmethod::new_nmethod(methodHandle, int, int, CodeOffsets*, int, DebugInformationRecorder*, Dependencies*, CodeBuffer*, int, OopMapSet*, ExceptionHandlerTable*, ImplicitExceptionTable*, AbstractCompiler*, int)+0x21f
        V [libjvm.so+0x570a8a] ciEnv::register_method(ciMethod*, int, CodeOffsets*, int, CodeBuffer*, int, OopMapSet*, ExceptionHandlerTable*, ImplicitExceptionTable*, AbstractCompiler*, int, bool, bool)+0x72a
        V [libjvm.so+0x44d398] Compilation::install_code(int)+0x158
        V [libjvm.so+0x44f66c] Compilation::compile_method()+0x20c
        V [libjvm.so+0x44fa18] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*)+0x398
        V [libjvm.so+0x450ff2] Compiler::compile_method(ciEnv*, ciMethod*, int)+0x132
        V [libjvm.so+0x665a9e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xace
        V [libjvm.so+0x6669b4] CompileBroker::compiler_thread_loop()+0x5d4
        V [libjvm.so+0xee2341] JavaThread::thread_main_inner()+0x221
        V [libjvm.so+0xee263d] JavaThread::run()+0x2ad
        V [libjvm.so+0xcf5088] java_start(Thread*)+0x108


        Current CompileTask:
        C1: 417 14 % 1 ReadAfterWrite$WriteA::run @ 9 (32 bytes)

          1. hs_err_pid10678.log
            47 kB
          2. hs_err_pid8812.log
            48 kB
          3. replay_pid10678.log
            65 kB
          4. replay_pid8812.log
            64 kB
          5. hs_err_pid12721.log
            27 kB
          6. replay_pid12721.log
            64 kB

              Assignee:
              Thomas Schatzl
              Reporter:
              Igor Ignatyev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: